# Factorio_seed_image_analyser

./: .gitignore  LICENSE  README.md  analyser.py  analyser_coordinate_wrapper.py  analyser_factorio_coordinate_wrapper.py  factorio_seed_image_analyser.py  image_analyser_pool.py  main.py  results.csv  seed_analyser_unittest.py  setup.cfg
factorio_seed_image_analyser/: __init__.py  analyser.py  analyser_factorio_coordinate_wrapper.py  factorio_seed_image_analyser.py  image_analyser_pool.py
imagetest1/: 4294967297._png
tests/: test_seed_analyser.py
