[metadata]
name = factorio_seed_image_analyser
version = 0.0.1
author = AntiElitz
description = A tool to analyse preview-images of Factorio seeds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntiElitz/Factorio_seed_image_analyser
project_urls =
    Bug Tracker = https://github.com/AntiElitz/Factorio_seed_image_analyser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    opencv-python
    Pillow
    tqdm

[options.entry_points]
console_scripts =
    factorio_seed_image_analyser = factorio_seed_image_analyser:main

[tox:tox]
envlist = py39

[testenv]
deps = pytest
commands = pytest